--- a/bankinguichallenge-lab06/pubspec.yaml
+++ b/bankinguichallenge-lab06/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   equatable: "1.2.5"
   styled_widget: "0.2.2"
   url_launcher: "5.7.4"
+  dotted_border: "1.0.6"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
